--- a/eCommerce/Views/Home/Index.cshtml
+++ b/eCommerce/Views/Home/Index.cshtml
@@ -2,7 +2,19 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <div class="row">
+        <div class="col-md-3 col-sm-6">
+            This is column 1. I'll put basic info here.
+        </div>
+        <div class="col-md-6 col-sm-6">
+            Another column here. More information about the games we sell.
+        </div>
+        <div class="col-md-3 col-sm-6">
+            More about upcoming features and whatnot.
+        </div>
+    </div>
+
+<button class="btn btn-danger">Danger</button>
+<button class="btn btn-primary">Primary</button>
+<button class="btn btn-light">Light</button>
+
