Created starting video game class

--- a/eCommerce/Views/Home/Index.cshtml
+++ b/eCommerce/Views/Home/Index.cshtml
@@ -2,19 +2,19 @@
     ViewData["Title"] = "Home Page";
 }
 
-    <div class="row">
-        <div class="col-md-3 col-sm-6">
-            This is column 1. I'll put basic info here.
-        </div>
-        <div class="col-md-6 col-sm-6">
-            Another column here. More information about the games we sell.
-        </div>
-        <div class="col-md-3 col-sm-6">
-            More about upcoming features and whatnot.
-        </div>
+<div class="row">
+    <div class="col-md-4">
+        This is column 1. I'll put basic info here.
     </div>
-
-<button class="btn btn-danger">Danger</button>
-<button class="btn btn-primary">Primary</button>
-<button class="btn btn-light">Light</button>
-
+    <div class="col-md-4">
+        Another column here. More information about the games we sell.
+    </div>
+    <div class="col-md-4">
+        More about upcoming features and whatnot.
+    </div>
+</div>
+<!--
+    <button class="btn btn-danger">Danger</button>
+    <button class="btn btn-primary">Primary</button>
+    <button class="btn btn-light">Light</button>
+-->
