--- a/eCommerce/Views/Shared/_Layout.cshtml
+++ b/eCommerce/Views/Shared/_Layout.cshtml
@@ -41,6 +41,7 @@
     </header>
     <div class="container">
         <partial name="_CookieConsentPartial" />
+        <!--What is role="main"??-->
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
