Added News section. Moved nav items to the right

--- a/eCommerce/Views/Home/Index.cshtml
+++ b/eCommerce/Views/Home/Index.cshtml
@@ -2,19 +2,49 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="row">
-    <div class="col-md-4">
-        This is column 1. I'll put basic info here.
+    <div class="container">
+        <div class="alert alert-dismissible alert-success">
+            <button type="button" class="close" data-dismiss="alert">&times;</button>
+            <h4 class="alert-heading">Hey you!</h4>
+            <p class="mb-0">Thanks for visiting my site. I hope I can fill all of your video game needs! <a href="#" class="alert-link">Learn more</a>.</p>
+        </div>
+        <div class="row">
+            <div class="col-md-4">
+                <h3>News</h3><hr class="bg-warning" />
+                <div class="list-group">
+                    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start active">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">List group item heading</h5>
+                            <small class="text-info">3 days ago</small>
+                        </div>
+                        <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                        <small>Donec id elit non mi porta.</small>
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">List group item heading</h5>
+                            <small class="text-info">3 days ago</small>
+                        </div>
+                        <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                        <small class="text-muted">Donec id elit non mi porta.</small>
+                    </a>
+                    <a href="#" class="list-group-item list-group-item-action flex-column align-items-start">
+                        <div class="d-flex w-100 justify-content-between">
+                            <h5 class="mb-1">List group item heading</h5>
+                            <small class="text-info">3 days ago</small>
+                        </div>
+                        <p class="mb-1">Donec id elit non mi porta gravida at eget metus. Maecenas sed diam eget risus varius blandit.</p>
+                        <small class="text-muted">Donec id elit non mi porta.</small>
+                    </a>
+                </div>
+            </div>
+            <div class="col-md-2">
+                Another column here. More information about the games we sell.
+            </div>
+            <div class="col-md-6">
+                More about upcoming features and whatnot.
+            </div>
+        </div>
     </div>
-    <div class="col-md-4">
-        Another column here. More information about the games we sell.
-    </div>
-    <div class="col-md-4">
-        More about upcoming features and whatnot.
-    </div>
-</div>
-<!--
-    <button class="btn btn-danger">Danger</button>
-    <button class="btn btn-primary">Primary</button>
-    <button class="btn btn-light">Light</button>
--->
+
+
