Configured login session

--- a/eCommerce/Views/Home/Index.cshtml
+++ b/eCommerce/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-@if(TempData["Message"] == null)
+@if(TempData["MessageHeader"] == null)
 {
     TempData["Message"] = "Welcome to my game emporium. I have just about everything you would ask for.";
     TempData["MessageHeader"] = "Hey There!";
