Enabled shopping cart cookies

--- a/eCommerce/Views/Shared/_Layout.cshtml
+++ b/eCommerce/Views/Shared/_Layout.cshtml
@@ -45,7 +45,7 @@
                             <li class="nav-item">
                                 <a class="nav-link" asp-controller="Account" asp-action="Logout">Logout</a>
                             </li>
-                            <li>
+                            <li class="text-light">
                                 Hello @SessionHelper.GetUserName(sessionData)
                             </li>
                         }
