--- a/eCommerce/Views/Shared/_Layout.cshtml
+++ b/eCommerce/Views/Shared/_Layout.cshtml
@@ -8,6 +8,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] | Kelsey's Game Emporium</title>
 
+    <link rel="stylesheet"
+          href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+          integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
+          crossorigin="anonymous">
+
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     </environment>
@@ -16,7 +21,7 @@
               asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
               crossorigin="anonymous"
-              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"/>
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" />
     </environment>
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
@@ -40,6 +45,10 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="VideoGame" asp-action="Index">Game Library</a>
                         </li>
+                        <li class="nav-item">
+                            
+                        </li>
+                        
                         @if (SessionHelper.isUserLoggedIn(sessionData))
                         {
                             <li class="nav-item">
@@ -63,8 +72,27 @@
             </div>
         </nav>
     </header>
+
     <div class="container">
         <partial name="_CookieConsentPartial" />
+
+        <a asp-action="Checkout" asp-controller="Cart">
+            <span class="fas fa-shopping-cart">
+                @{
+                    int gameTotal = CartHelper.GetGameCount(sessionData);
+                }
+                @if (gameTotal == 0)
+                {
+                    <text>Empty</text>
+                }
+                else
+                {
+                    @gameTotal
+                }
+            </span>
+        </a>
+        
+
         <!--What is role="main"??-->
         <main role="main" class="pb-3">
             @RenderBody()
